--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,12 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- script: |
+    curl https://storage.googleapis.com/flutter_infra/releases/stable/linux/flutter_linux_v1.5.4-hotfix.2-stable.tar.xz -o flutter.tar.xz
+    tar xf ./flutter.tar.xz
+    export PATH="$PATH:`pwd`/flutter/bin"
+  displayName: 'Install Flutter'
 
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    flutter test
+  displayName: 'Run Test'
